@@ -1,5 +1,7 @@
 package com.junioroffers.infrastructure.apivalidation;
 
+import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -8,16 +10,14 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 
-import java.util.List;
-
 @ControllerAdvice
 public class ApiValidationErrorHandler {
 
-    @ResponseBody
-    @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ApiValidationErrorDto handleValidationExceptions(MethodArgumentNotValidException exception) {
-        final List<String> errors = getErrorsFromException(exception);
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    @ResponseBody
+    public ApiValidationErrorDto handleValidationExceptions(MethodArgumentNotValidException e) {
+        final List<String> errors = getErrorsFromException(e);
         return new ApiValidationErrorDto(errors, HttpStatus.BAD_REQUEST);
     }
 
@@ -26,6 +26,6 @@ public class ApiValidationErrorHandler {
                 .getAllErrors()
                 .stream()
                 .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
